--- a/index.ipynb
+++ b/index.ipynb
@@ -55,9 +55,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "print(zero_to_three[0])\n",
     "print(zero_to_three[1])\n",
@@ -85,9 +96,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "for number in zero_to_three:\n",
     "    print(number)"
@@ -112,9 +134,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is iteration: 1\n",
+      "0\n",
+      "This is iteration: 2\n",
+      "1\n",
+      "This is iteration: 3\n",
+      "2\n",
+      "This is iteration: 4\n",
+      "3\n",
+      "The for loop is finished now! I am not in the for loop block, which is why I only printed once!\n"
+     ]
+    }
+   ],
    "source": [
     "iteration_count = 0\n",
     "for whatever_we_want in zero_to_three:\n",
