Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -420,7 +420,7 @@
     }
    ],
    "source": [
-    "for index in list(range(0, len(countries))): #you can just run for index in li\n",
+    "for index in list(range(0, len(countries))): #you can just run for index in range(len(list)) \n",
     "    print(cities[index]+\",\", countries[index])"
    ]
   },
