Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -421,7 +421,7 @@
    ],
    "source": [
     "for index in list(range(0, len(countries))): #you can just run for index in range(len(list)) since range outputs int\n",
-    "    print(cities[index]+\",\", countries[index]) #whic"
+    "    print(cities[index]+\",\", countries[index]) #which is used for indexing"
    ]
   },
   {
