Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -491,7 +491,7 @@
    "source": [
     "different_elements = ['A String', [\"a\", 'list', \"of\", 5, [\"elements\"]], {'this': \"is a dictionary\"}]\n",
     "for element in different_elements:\n",
-    "    print(element)"
+    "    print(element) #indexes outer most sh"
    ]
   },
   {
